Revert "feat: Prevent overflow"
This reverts commit 242919c73b6c2265d04ab88cdb216dfad6a838d9.

--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@
 
 body {
   font-family: "Varela Round", sans-serif;
-  overflow:hidden;
 }
 
 .container {
